--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "path": "^0.12.7",
     "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": ">=3.1.11"
   },
   "scripts": {
     "server": "webpack-dev-server --hot --inline",
